--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,1 +1,19 @@
 @import '../../vendor/filament/filament/resources/css/theme.css';
+
+.user-content,
+.user-content * {
+    all: revert;
+    font: inherit;
+    color: inherit;
+}
+
+.user-content table {
+    border-collapse: collapse;
+    border: 1px solid #ccc;
+}
+
+.user-content th,
+.user-content td {
+    border: 1px solid #ccc;
+    padding: 4px 8px;
+}
